--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ anyascii==0.3.2
 click==8.2.0
 colorama==0.4.6
 contractions==0.1.73
+emoji==2.14.1
 et_xmlfile==2.0.0
 ftfy==6.3.1
 joblib==1.5.0
+lightgbm==4.6.0
 nltk==3.9.1
 numpy==2.2.4
 openpyxl==3.1.5
